# daily-pipeline

./: README.md  main.py  pyproject.toml
infra/: main.tf
