[tool.poetry]
name = "daily-pipeline"
version = "0.1.0"
description = ""
authors = ["Kevin Minutti <minutti70@gmail.com>"]
readme = "README.md"
packages = [{include = "daily_pipeline"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
